# Market-Plutus-project

./: README.md  batch43-project.cabal  cabal.project
src/Batch43/: MarketCompiler.hs  MarketValidator.hs
src/Batch43/script/: .env  buy.sh  deploy.sh  incl.sh  nft-dep.sh  refund.sh  toBuyer.sh  toSeller.sh
src/Batch43/txfiles/: createSC_tx.raw  createSC_tx.signed  deploy_tx.raw  deploy_tx.signed  tx-buy-accept.build  tx-buy-accept.sign  tx-deposit-accept.build  tx-deposit-accept.sign  tx-refund-accept.build  tx-refund-accept.sign
src/temp/input/: Accept.json  ProdDatum-old.hash  ProdDatum.hash  ProdDatum.json  ProdValidator.plutus  script.addr  script1.addr
src/temp/txns/: deploy_tx.raw  deploy_tx.signed  tx-buy-accept.build  tx-buy-accept.sign  tx-deposit-accept.build  tx-deposit-accept.sign
